--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  --fonte: 'Montserrat', sans-serif;
+  --branco: #ffffff;
+  --preto: #000000;
+  --cinza: #e2e2e2;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
