--- a/src/pages/Favoritos/Favoritos.module.css
+++ b/src/pages/Favoritos/Favoritos.module.css
@@ -1,9 +1,4 @@
 .container {
-  padding: 0 0 1em 0;
-  margin-top: 0.5em;
-  width: 282px;
-  background-color: var(--cinza);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-around;
 }
